# ssa-cpp

./: .directory  .gitmodules  CMakeLists.txt  README.md  scriptresults.txt
include/: basic_line.hpp  dialogue_line.hpp  script.hpp  srt_time.hpp  subtitle.hpp  subtitle_line.hpp  utils.hpp
scripts/: .directory  audio_extractor.sh  condor_submit_generator.sh  movie_extractor.sh  script.sh
src/: .directory  basic_line.cpp  dialogue_line.cpp  main.cpp  script.cpp  srt_time.cpp  subtitle.cpp  subtitle_line.cpp  utils.cpp
